<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/container_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            app:cardCornerRadius="@dimen/corner_radius"
            app:cardElevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="24dp"
                android:paddingEnd="0dp">

                <TextView
                    android:id="@+id/tv_destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="200dp"
                    android:textStyle="bold"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toStartOf="@+id/tv_date"
                    app:layout_constraintHorizontal_weight="3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Бровары" />

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:textStyle="bold"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintEnd_toStartOf="@id/menu_icon"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="10.10.2023" />

                <ImageView
                    android:id="@+id/menu_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_menu_24"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_date"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/distance_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/distance_title"
                    app:layout_constrainedWidth="false"
                    app:layout_constraintBottom_toTopOf="@+id/tv_distance"
                    app:layout_constraintStart_toStartOf="@+id/tv_distance"
                    app:layout_constraintTop_toBottomOf="@+id/tv_destination" />

                <TextView
                    android:id="@+id/consumption_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/consumption_title"
                    app:layout_constrainedWidth="false"
                    app:layout_constraintEnd_toEndOf="@+id/tv_consumption"
                    app:layout_constraintStart_toStartOf="@+id/tv_consumption"
                    app:layout_constraintTop_toTopOf="@+id/distance_title" />

                <TextView
                    android:id="@+id/fuel_price_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fuel_price_title"
                    app:layout_constrainedWidth="false"
                    app:layout_constraintEnd_toEndOf="@+id/tv_fuel_price"
                    app:layout_constraintStart_toStartOf="@+id/tv_fuel_price"
                    app:layout_constraintTop_toTopOf="@+id/distance_title" />

                <TextView
                    android:id="@+id/cost_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cost_title"
                    app:layout_constrainedWidth="false"
                    app:layout_constraintEnd_toEndOf="@+id/tv_cost"
                    app:layout_constraintTop_toTopOf="@+id/distance_title" />

                <TextView
                    android:id="@+id/tv_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textStyle="bold"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintStart_toStartOf="@+id/tv_destination"
                    app:layout_constraintTop_toBottomOf="@+id/distance_title"
                    tools:text="1500 km" />

                <TextView
                    android:id="@+id/tv_consumption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_distance"
                    app:layout_constraintEnd_toStartOf="@+id/tv_fuel_price"
                    app:layout_constraintStart_toEndOf="@+id/tv_distance"
                    tools:text="12.7 l/100km" />

                <TextView
                    android:id="@+id/tv_fuel_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_distance"
                    app:layout_constraintEnd_toStartOf="@+id/tv_cost"
                    app:layout_constraintStart_toEndOf="@+id/tv_consumption"
                    tools:text="14.3 UAH/L" />

                <TextView
                    android:id="@+id/tv_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textStyle="bold"
                    app:layout_constrainedWidth="true"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_distance"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="88.5 UAH" />


                <TextView
                    android:id="@+id/tv_comments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="5dp"
                    android:padding="2dp"
                    android:text="@string/lorem_"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_distance" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/fuel_image"
        android:src="@drawable/fuel"
        app:layout_constraintHeight_max="38dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="38dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
